tests/expectations/compiler/function/17_outputs_fail.out
Error [ETYC0372169]: The transition `bar` has 17 output parameters, which exceeds the allowed limit of 16.
    --> compiler-test:3:8
     |
   3 |     fn bar() -> (
     |        ^^^
     |
     = Consider reducing the number of output parameters. You might combine some parameters into a struct or refactor the {variant} to simplify its signature.
Error [ETYC0372169]: The async transition `baz` has 17 output parameters, which exceeds the allowed limit of 16.
    --> compiler-test:14:14
     |
  14 |     async fn baz() ->
     |              ^^^
     |
     = Consider reducing the number of output parameters. You might combine some parameters into a struct or refactor the {variant} to simplify its signature.
Error [ETYC0372169]: The function `foo` has 17 output parameters, which exceeds the allowed limit of 16.
    --> compiler-test:28:4
     |
  28 | fn foo(x: u8) -> (
     |    ^^^
     |
     = Consider reducing the number of output parameters. You might combine some parameters into a struct or refactor the {variant} to simplify its signature.
